# gurain-assistant-pc

./:  .prettierignore  README.md  cleanup.py  package.json  pnpm-lock.yaml
.run/: program.run.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.config/: README.md  config.toml
src-tauri/lib/data/data-crypto/: .gitignore  Cargo.toml
src-tauri/lib/system/hotkey-keyboard/: Cargo.toml
src-tauri/lib/system/hotkey-keyboard/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
